--- a/portfolio.html
+++ b/portfolio.html
@@ -235,6 +235,18 @@
                     </li>
                 </ul>
             </div>
+            <form action="#" class="footer-form">
+                <p class="footer-form-title">Подпишитесь на рассылку</p>
+                <div class="footer-form-content">
+                        <input type="gmail" name="user-gmail" class="futer-form-input" placeholder="E-mail"/>
+                    <button type="submit" class="footer-form-button">
+                        Вставить
+                        <svg class="footer-form-button-icon">
+                            <use href="./image/sprite.svg.svg#icon-icon-send" width="24" height="24"/>
+                        </svg>
+                        </button>
+                </div>
+            </form>
         </div>    
     </footer >
 </body>
